--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,62 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
 
+    <title>Web Conference!</title>
+
+  <style>
+    * {
+      margin: 0; 
+      padding: 0; 
+      box-sizing: border-box;
+    }
+    body {
+      background-color: #141932;
+      color: #f7f7f7;
+      font-family: 'Ysabeau Infant', sans-serif;
+      font-size: 18px;
+    }
+    body h1 {
+      color: #37e1e1;
+      font-family: 'Open Sans', sans-serif;
+      margin: 10px 0px;
+    }
+    body h2 {
+      color: #37e1e1;
+      margin: 10px 0px;
+    }
+    body p {
+      margin: 10px 0px;
+    }
+    body a {
+      color: #37e1e1;
+    }
+    /* unvisited link */
+    body a:link {
+      color: #37e1e1;
+    }
+
+    /* visited link */
+    body a:visited {
+      color: #37e1e1;
+    }
+
+    /* mouse over link */
+    body a:hover {
+      color: hotpink;
+    }
+
+    /* selected link */
+    body a:active {
+      color: blue;
+    } 
+  </style>
+    
+  </head>
+
+  <body>
+      {{ content }}
+  </body>
+</html>
